--- a/datetimepicker/datetimepicker.html
+++ b/datetimepicker/datetimepicker.html
@@ -12,7 +12,7 @@
     <style>
         .text {
             width: 400px;
-            word-break: break-all;
+            /*word-break: break-all;*/
             text-overflow: ellipsis;
             display: -webkit-box;
             /** 将对象作为伸缩盒子模型显示 **/
